Fix production CORS configuration and add WebMvcConfig for Railway frontend